<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/goldenRod"
        tools:context=".SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="411dp"
            android:layout_height="891dp"
            android:background="@drawable/db_custom_sign_up_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleAccedi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginTop="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="100dp"
                android:padding="5dp"
                android:hint="@string/name"
                android:background="@drawable/db_custom_button_welcome"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleAccedi"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="100dp"
                android:padding="5dp"

                android:hint="@string/email"
                android:background="@drawable/db_custom_button_welcome"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="100dp"
               android:padding="5dp"
                android:background="@drawable/db_custom_button_welcome"
                android:backgroundTint="@color/white"
                app:passwordToggleEnabled="true"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editEmail"
                android:importantForAutofill="no" />

            <CheckBox
                android:id="@+id/checkbox_ricorda"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:text="@string/accetta_le_condizioni"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@id/editPassword"
                app:layout_constraintTop_toBottomOf="@id/editPassword"
                tools:ignore="TextContrastCheck" />


            <Button
                android:id="@+id/butLogin"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="60dp"
                android:padding="5dp"
                android:background="@drawable/db_custom_button_welcome"
                android:enabled="false"
                android:text="@string/login"
                android:backgroundTint="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkbox_ricorda" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


