<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorA"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/carouselRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeTitle" />

            <ImageView
                android:id="@+id/circleAvatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/user_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/userHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/hello_user"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/circleAvatar"
                app:layout_constraintStart_toEndOf="@id/circleAvatar"
                app:layout_constraintTop_toTopOf="@id/circleAvatar" />

            <TextView
                android:id="@+id/nameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/userHello"
                app:layout_constraintStart_toEndOf="@id/userHello"
                app:layout_constraintTop_toTopOf="@id/userHello" />

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/db_custom_button"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@id/circleAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/circleAvatar" />

            <TextView
                android:id="@+id/homeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/circleAvatar"
                app:layout_constraintTop_toBottomOf="@id/circleAvatar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/titleComicsList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carouselRecyclerview"
                tools:listitem="@layout/item_card_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
